# sashecka

./: .gitignore  README.md  compose.prod.yaml  compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  deps.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  groups.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: migrate.py  session.py
backend/app/models/: __init__.py  group.py  user.py  user_group_access.py
backend/app/schemas/: auth.py  group.py  user.py
deploy/nginx/: default.conf.template
docs/: production-vps.md
frontend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json
frontend/apps/auth/: index.html  package.json  vite.config.ts
frontend/apps/auth/.__mf__temp/authRemote/: localSharedImportMap.js
frontend/apps/auth/.mf/diagnostics/: latest.json
frontend/apps/auth/src/: App.tsx  main.tsx
frontend/apps/profile-vue/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/profile-vue/src/: App.vue  main.ts  mount.ts
frontend/apps/react-app/: index.html  package.json  vite.config.ts
frontend/apps/react-app/src/: App.tsx
frontend/apps/shell/: index.html  package.json  vite.config.ts
frontend/apps/shell/src/: App.tsx  bootstrap.tsx  mf.d.ts
frontend/deploy/nginx/: spa.conf  static.conf
frontend/scripts/: dev-all.mjs
(+12 files in other folders)
